force-app/main/default/objects/NCR__c/NCR__c.object-meta.xml
<CustomObject>
    <description>Non-Conformance Reports</description>
    <label>NCR</label>
    <nameField>
        <displayFormat>NCR #{YY}-{000}</displayFormat>
        <label>NCR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCRs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>