force-app/main/default/objects/NCR__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <formula>Work_Order__r.PO_Number__c</formula>
    <label>Customer PO</label>
    <type>Text</type>
</CustomField>