force-app/main/default/objects/NCR__c/fields/Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy__c</fullName>
    <formula>Actual_Quantity__c - Expected_Quantity__c</formula>
    <label>Discrepancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>