force-app/main/default/objects/NCR__c/fields/Disposition_Method__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Method__c</fullName>
    <label>Disposition Method</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>