force-app/main/default/objects/NCR__c/fields/Drawing_Revision__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Revision__c</fullName>
    <label>Drawing Revision #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>