force-app/main/default/objects/NCR__c/fields/Equipment_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Part_Description__c</fullName>
    <label>Equipment/Part Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>