force-app/main/default/objects/NCR__c/fields/Expected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quantity__c</fullName>
    <label>Expected Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>