force-app/main/default/objects/NCR__c/fields/Inspection_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Owner__c</fullName>
    <label>Inspection Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charlie Matheson</fullName>
            </value>
            <value>
                <fullName>Jeremy Holt</fullName>
            </value>
            <value>
                <fullName>Rick Hubarewich</fullName>
            </value>
            <value>
                <fullName>Ryan Bouffard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>