force-app/main/default/objects/NCR__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3P Prinz</fullName>
            </value>
            <value>
                <fullName>A.R. Thomson</fullName>
            </value>
            <value>
                <fullName>Albany Pump</fullName>
            </value>
            <value>
                <fullName>Allight Primax</fullName>
            </value>
            <value>
                <fullName>BDI</fullName>
            </value>
            <value>
                <fullName>BJM Pumps</fullName>
            </value>
            <value>
                <fullName>Buffalo Wire</fullName>
            </value>
            <value>
                <fullName>Camcorp Inc.</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>CMI</fullName>
            </value>
            <value>
                <fullName>Cook Legacy</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Cunningham</fullName>
            </value>
            <value>
                <fullName>Delta Screens</fullName>
            </value>
            <value>
                <fullName>ERIEZ</fullName>
            </value>
            <value>
                <fullName>Flexicon</fullName>
            </value>
            <value>
                <fullName>FLSmidth Krebs</fullName>
            </value>
            <value>
                <fullName>FLSPT</fullName>
            </value>
            <value>
                <fullName>Galigher</fullName>
            </value>
            <value>
                <fullName>HammerTek</fullName>
            </value>
            <value>
                <fullName>Hanjin Pumps</fullName>
            </value>
            <value>
                <fullName>HY-TRAN</fullName>
            </value>
            <value>
                <fullName>JADCO</fullName>
            </value>
            <value>
                <fullName>James Brinkley</fullName>
            </value>
            <value>
                <fullName>Koshin Pumps</fullName>
            </value>
            <value>
                <fullName>MCI</fullName>
            </value>
            <value>
                <fullName>McLanahan</fullName>
            </value>
            <value>
                <fullName>Miller Leaman</fullName>
            </value>
            <value>
                <fullName>Mod Power</fullName>
            </value>
            <value>
                <fullName>Mody Pumps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>