force-app/main/default/objects/NCR__c/fields/Manufacturer_Drawing__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Drawing__c</fullName>
    <label>Manufacturer Drawing #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>