force-app/main/default/objects/NCR__c/fields/Manufacturer_Part__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Part__c</fullName>
    <label>Manufacturer Part #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>