force-app/main/default/objects/NCR__c/fields/NCR_Code__c.field-meta.xml
<CustomField>
    <fullName>NCR_Code__c</fullName>
    <label>NCR Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MECH-Mechanical</fullName>
            </value>
            <value>
                <fullName>MISL-Mislabeled</fullName>
            </value>
            <value>
                <fullName>SPEC-Specifications</fullName>
            </value>
            <value>
                <fullName>SHIP-Shipping Discrepancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>