force-app/main/default/objects/NCR__c/fields/NCR_Type__c.field-meta.xml
<CustomField>
    <fullName>NCR_Type__c</fullName>
    <label>NCR Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External (Supplier Shipment)</fullName>
            </value>
            <value>
                <fullName>Internal (Work Order)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>