force-app/main/default/objects/NCR__c/fields/Non_Conformation_Description__c.field-meta.xml
<CustomField>
    <fullName>Non_Conformation_Description__c</fullName>
    <label>Non-Conformation Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>