force-app/main/default/objects/NCR__c/fields/Welco_Order__c.field-meta.xml
<CustomField>
    <fullName>Welco_Order__c</fullName>
    <formula>Work_Order__r.AdagioOrderNumber__c</formula>
    <label>Welco Order #</label>
    <type>Text</type>
</CustomField>